--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -17,6 +17,20 @@ jobs:
         with:
           toolchain: stable
           override: true
+          
+      - name: Get branch name
+        id: branch_name
+        run: echo "BRANCH_NAME=${{ github.head_ref }}" >> $GITHUB_ENV
+
+      - name: Extract folder name
+        id: folder_name
+        run: |
+          FOLDER_NAME=$(echo $BRANCH_NAME | sed 's/feature\/\(.*\)/\1/')
+          echo "FOLDER_NAME=$FOLDER_NAME" >> $GITHUB_ENV
+
+      - name: Change directory
+        run: cd exercises && cd ${{ steps.folder_name.outputs.FOLDER_NAME }}      
+    
       - name: Run tests
         uses: actions-rs/cargo@v1
         with:
