--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -28,10 +28,5 @@ jobs:
           FOLDER_NAME=$(echo $BRANCH_NAME | sed 's/feature\/\(.*\)/\1/')
           echo "FOLDER_NAME=$FOLDER_NAME" >> $GITHUB_ENV
 
-      - name: Change directory
-        run: cd exercises && cd ${{ steps.folder_name.outputs.FOLDER_NAME }}      
-    
-      - name: Run tests
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
+      - name: Change directory and run tests
+        run: cd exercises && cd ${{ steps.folder_name.outputs.FOLDER_NAME }} && cargo test --verbose      
