--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -28,17 +28,17 @@ jobs:
           FOLDER_NAME=$(echo $BRANCH_NAME | sed 's/feature\/\(.*\)/\1/')
           echo "FOLDER_NAME=$FOLDER_NAME" >> $GITHUB_ENV
 
-      - name: Install cargo-tarpaulin
-        run: cargo install cargo-tarpaulin
+      # - name: Install cargo-tarpaulin
+      #   run: cargo install cargo-tarpaulin
 
-      - name: Generate coverage report
-        run: cd exercises && cd $FOLDER_NAME && cargo tarpaulin --out Xml
+      # - name: Generate coverage report
+      #   run: cd exercises && cd $FOLDER_NAME && cargo tarpaulin --out Xml
 
-      - name: Upload coverage report
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: ./target/kcov/merged/coverage.lcov
+      # - name: Upload coverage report
+      #   uses: coverallsapp/github-action@master
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     path-to-lcov: ./target/kcov/merged/coverage.lcov
 
       - name: Change directory and run tests
         run: cd exercises && cd $FOLDER_NAME && cargo test --verbose      
